[gd_scene load_steps=60 format=3 uid="uid://dj0vwrytcens8"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_6v5vy"]
[ext_resource type="Texture2D" uid="uid://d0uo07ew4ldj1" path="res://assets/zato_spritesheet.png" id="1_ugewn"]
[ext_resource type="Script" path="res://scripts/StateMachine.gd" id="3_kdfbn"]
[ext_resource type="Script" path="res://scripts/PlayerIdle.gd" id="4_74pam"]
[ext_resource type="Script" path="res://scripts/PlayerWalk.gd" id="5_gowuv"]
[ext_resource type="Script" path="res://scripts/PlayerStrike.gd" id="6_2hajr"]
[ext_resource type="AudioStream" uid="uid://b6v2tf7ph23ss" path="res://sound/fx/Sword_swoosh1.mp3" id="7_7lq72"]
[ext_resource type="AudioStream" uid="uid://be1hxywdrbq1d" path="res://sound/fx/Sword_swoosh2.mp3" id="8_vn0uy"]
[ext_resource type="AudioStream" uid="uid://bnwqkq3kd3i6a" path="res://sound/fx/Sword_swoosh3.mp3" id="9_v0g0s"]
[ext_resource type="Script" path="res://scripts/PlayerHit.gd" id="10_86ixe"]
[ext_resource type="Script" path="res://scripts/PlayerDie.gd" id="11_t6om0"]
[ext_resource type="Script" path="res://scripts/PlayerZazen.gd" id="12_guyje"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gkteh"]
atlas = ExtResource("1_ugewn")
region = Rect2(0, 1024, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8eti"]
atlas = ExtResource("1_ugewn")
region = Rect2(128, 1024, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfvru"]
atlas = ExtResource("1_ugewn")
region = Rect2(256, 1024, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_155ds"]
atlas = ExtResource("1_ugewn")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aldj8"]
atlas = ExtResource("1_ugewn")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea0lm"]
atlas = ExtResource("1_ugewn")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m50sx"]
atlas = ExtResource("1_ugewn")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uy4i7"]
atlas = ExtResource("1_ugewn")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymlqp"]
atlas = ExtResource("1_ugewn")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw3ln"]
atlas = ExtResource("1_ugewn")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3sp5"]
atlas = ExtResource("1_ugewn")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfta5"]
atlas = ExtResource("1_ugewn")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0u3m"]
atlas = ExtResource("1_ugewn")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_35yjm"]
atlas = ExtResource("1_ugewn")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhxe5"]
atlas = ExtResource("1_ugewn")
region = Rect2(768, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3lyk"]
atlas = ExtResource("1_ugewn")
region = Rect2(896, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovjxe"]
atlas = ExtResource("1_ugewn")
region = Rect2(1024, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nsm5"]
atlas = ExtResource("1_ugewn")
region = Rect2(1152, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn1r7"]
atlas = ExtResource("1_ugewn")
region = Rect2(1280, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e37j0"]
atlas = ExtResource("1_ugewn")
region = Rect2(1408, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnuty"]
atlas = ExtResource("1_ugewn")
region = Rect2(128, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ekjw"]
atlas = ExtResource("1_ugewn")
region = Rect2(256, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2vtv"]
atlas = ExtResource("1_ugewn")
region = Rect2(384, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l7rk"]
atlas = ExtResource("1_ugewn")
region = Rect2(512, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_scekn"]
atlas = ExtResource("1_ugewn")
region = Rect2(640, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7suol"]
atlas = ExtResource("1_ugewn")
region = Rect2(768, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn0u4"]
atlas = ExtResource("1_ugewn")
region = Rect2(896, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_reywi"]
atlas = ExtResource("1_ugewn")
region = Rect2(1024, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_826t5"]
atlas = ExtResource("1_ugewn")
region = Rect2(1152, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi5ql"]
atlas = ExtResource("1_ugewn")
region = Rect2(0, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jymj7"]
atlas = ExtResource("1_ugewn")
region = Rect2(128, 896, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv4ar"]
atlas = ExtResource("1_ugewn")
region = Rect2(256, 896, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8v0o"]
atlas = ExtResource("1_ugewn")
region = Rect2(384, 896, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6d7ob"]
atlas = ExtResource("1_ugewn")
region = Rect2(512, 896, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4ygd"]
atlas = ExtResource("1_ugewn")
region = Rect2(640, 896, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3d63"]
atlas = ExtResource("1_ugewn")
region = Rect2(768, 896, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5iq0m"]
atlas = ExtResource("1_ugewn")
region = Rect2(896, 896, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilxrx"]
atlas = ExtResource("1_ugewn")
region = Rect2(0, 896, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbcc3"]
atlas = ExtResource("1_ugewn")
region = Rect2(0, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp0q7"]
atlas = ExtResource("1_ugewn")
region = Rect2(128, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oayjg"]
atlas = ExtResource("1_ugewn")
region = Rect2(256, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml8tb"]
atlas = ExtResource("1_ugewn")
region = Rect2(384, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd54y"]
atlas = ExtResource("1_ugewn")
region = Rect2(512, 512, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_0llsr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkteh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8eti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfvru")
}],
"loop": false,
"name": &"GetHit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_155ds")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aldj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea0lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m50sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uy4i7")
}],
"loop": true,
"name": &"LiftSword",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymlqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw3ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3sp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfta5")
}],
"loop": false,
"name": &"Strike1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0u3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35yjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhxe5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3lyk")
}],
"loop": false,
"name": &"Strike2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovjxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nsm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn1r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e37j0")
}],
"loop": false,
"name": &"Strike3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnuty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ekjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2vtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l7rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scekn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7suol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn0u4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_reywi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_826t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi5ql")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jymj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv4ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8v0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6d7ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4ygd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3d63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5iq0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilxrx")
}],
"loop": true,
"name": &"WalkBack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbcc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp0q7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oayjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml8tb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd54y")
}],
"loop": true,
"name": &"Zazen",
"speed": 1.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qy5w6"]
radius = 5.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qg32p"]
height = 46.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ky1jl"]
radius = 13.0384

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 3
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_6v5vy")
speed = 100

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0llsr")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 34)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qy5w6")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 3

[node name="HitboxArea" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 13)
shape = SubResource("CapsuleShape2D_qg32p")

[node name="Hurtbox" type="Area2D" parent="."]
monitoring = false

[node name="ShortAttackHurtbox" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(39, 19)
shape = SubResource("CircleShape2D_ky1jl")

[node name="Debug" type="Label" parent="."]
visible = false
offset_left = -2.0
offset_top = -48.0
offset_right = 38.0
offset_bottom = -25.0

[node name="Debug2" type="Label" parent="."]
visible = false
offset_left = -2.0
offset_top = -24.0
offset_right = 38.0
offset_bottom = -1.0

[node name="Debug3" type="Label" parent="."]
visible = false
offset_left = -4.0
offset_top = 42.0
offset_right = 36.0
offset_bottom = 65.0

[node name="StateMachinePlayer" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_kdfbn")
starting_state = NodePath("Zazen")

[node name="Idle" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("walk_state", "strike_state")]
script = ExtResource("4_74pam")
walk_state = NodePath("../Walk")
strike_state = NodePath("../Strike1")
animation_name = "Idle"

[node name="Walk" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("idle_state", "strike_state")]
script = ExtResource("5_gowuv")
idle_state = NodePath("../Idle")
strike_state = NodePath("../Strike1")
animation_name = "Walk"

[node name="Strike1" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("idle_state", "walk_state", "next_strike")]
script = ExtResource("6_2hajr")
idle_state = NodePath("../Idle")
walk_state = NodePath("../Walk")
next_strike = NodePath("../Strike2")
sound = ExtResource("7_7lq72")
animation_name = "Strike1"

[node name="Strike2" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("idle_state", "walk_state", "next_strike")]
script = ExtResource("6_2hajr")
idle_state = NodePath("../Idle")
walk_state = NodePath("../Walk")
next_strike = NodePath("../Strike3")
sound = ExtResource("8_vn0uy")
animation_name = "Strike2"

[node name="Strike3" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("idle_state", "walk_state", "next_strike")]
script = ExtResource("6_2hajr")
idle_state = NodePath("../Idle")
walk_state = NodePath("../Walk")
next_strike = NodePath("../Walk")
sound = ExtResource("9_v0g0s")
animation_name = "Strike3"

[node name="Hit" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("next_state", "death_state")]
script = ExtResource("10_86ixe")
next_state = NodePath("../Idle")
death_state = NodePath("../Die")
animation_name = "GetHit"

[node name="Die" type="Node" parent="StateMachinePlayer"]
script = ExtResource("11_t6om0")

[node name="Zazen" type="Node" parent="StateMachinePlayer" node_paths=PackedStringArray("walk_state", "strike_state")]
script = ExtResource("12_guyje")
walk_state = NodePath("../Walk")
strike_state = NodePath("../Strike1")
animation_name = "Zazen"

[node name="PlayerFX" type="AudioStreamPlayer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachinePlayer/Strike1" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachinePlayer/Strike2" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachinePlayer/Strike3" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachinePlayer/Hit" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="StateMachinePlayer/Strike1" method="_on_hurtbox_area_entered"]
